--- a/styles/style.css
+++ b/styles/style.css
@@ -13,4 +13,334 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-family: var(--font-main, fantasy);
+  font-variation-settings: "wgth" var(--weight-text);
+  align-items: center;
+  justify-content: center;
+  background-image: repeating-linear-gradient(
+      to left,
+      #d3d3d3 0px,
+      #d3d3d3 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    repeating-linear-gradient(
+      to top,
+      #d3d3d3 0px,
+      #d3d3d3 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    linear-gradient(#e7e7e7, #1a1a1a);
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  padding: 100px 0;
+  margin: auto;
+  width: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
+}
+
+.header {
+  border: 2px solid #000;
+  background-color: #fff;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding: clamp(7.5rem, 7.1479rem + 1.5023vw, 8rem) 0
+    clamp(7.5rem, 7.1479rem + 1.5023vw, 8rem);
+  font-family: var(--font-accent), fantasy;
+  margin-bottom: 102px;
+}
+
+.header__logo {
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.header__title {
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.card {
+  max-height: 1043px;
+  border: 2px solid #000;
+  background-color: #fff;
+  margin-top: 50px;
+}
+
+.card__title {
+  font-size: 18px;
+  font-weight: 700;
+  padding-top: 3px;
+  padding-left: 10px;
+  padding-bottom: 7px;
+  font-family: var(--font-main);
+}
+
+.card__text {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21px;
+  padding-top: 25px;
+}
+
+.card__label {
+  position: absolute;
+  font-family: var(--font-accent);
+  font-size: 14px;
+  color: black;
+  mix-blend-mode: hard-light;
+  -webkit-text-stroke: 0.7px #fff;
+  opacity: 0.5;
+  top: 25px;
+  right: clamp(0.8125rem, 0.5484rem + 1.1268vw, 1.5625rem);
+  z-index: 2;
+}
+
+.card__container {
+  position: relative;
+  border-top: 2px solid #000;
+  border-bottom: 2px solid #000;
+  display: block;
+  overflow: hidden;
+}
+
+.card__image {
+  object-fit: contain;
+  width: 100%;
+  display: block;
+}
+
+.card__image-one {
+  filter: contrast(110%);
+}
+
+.card__image-two {
+  filter: grayscale(0.8);
+}
+
+.card__image-three {
+  filter: saturate(200%);
+}
+
+.card__image-four {
+  filter: hue-rotate(20deg);
+}
+
+.card__image-five {
+  filter: invert(80%);
+}
+
+.card__image-six {
+  filter: sepia(100%);
+}
+
+.card__image-seven {
+  filter: blur(0.3em);
+}
+
+.card__image-eight {
+  filter: opacity(0.7);
+}
+
+.card__text {
+  padding-left: 25px;
+  padding-right: 25px;
+  line-height: 21px;
+}
+
+.card__text-end {
+  padding-top: 27px;
+  line-height: 21px;
+}
+
+.card__icon {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 25px;
+  padding-bottom: 21px;
+  padding-top: 25px;
+}
+
+.button {
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  color: #fff;
+}
+
+.button:focus {
+  outline: none;
+  box-shadow: 2px 2px #000;
+  transition: box-shadow 0.35s ease;
+}
+
+.button::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.5s ease-in-out;
+  z-index: 1;
+}
+
+.button:hover::after {
+  transform: scaleX(1);
+}
+
+.button__end {
+  border: 2px solid #000;
+  background-color: #fff;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 50px;
+  width: 339px;
+  height: 55px;
+  margin-left: 180px;
+  margin-bottom: 103px;
+  gap: 8px;
+}
+
+.button__text {
+  font-size: 14px;
+  font-weight: 400;
+  position: relative;
+  display: inline-block;
+  z-index: 2;
+  line-height: 90%;
+  mix-blend-mode: difference;
+  font-family: var(--font-accent), fantasy;
+  background-color: var(--color-contour);
+}
+
+.image_button {
+  position: relative;
+  z-index: 2;
+  mix-blend-mode: difference;
+  filter: invert(1);
+  height: 21px;
+  width: 21px;
+}
+
+.card__icon-button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.card__like-button {
+  border: 2px solid #000;
+  background-color: transparent;
+  width: 130px;
+  height: 38px;
+}
+
+.modal {
+  border: 2px solid #000;
+  width: 357px;
+  height: 193px;
+  padding-left: 30px;
+  padding-top: 30px;
+}
+
+.modal[open] {
+  display: grid;
+}
+
+.modal[open]::backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal__content {
+  display: flex;
+  flex-direction: row;
+  background: white;
+  gap: 20px;
+  padding-bottom: 30px;
+}
+
+.modal__text {
+  font-family: var(--font-accent), fantasy;
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: uppercase;
+  line-height: 150%;
+}
+
+.modal__image {
+  width: 39px;
+  height: 39px;
+}
+
+.modal__button {
+  background: transparent;
+  width: 293px;
+  height: 38px;
+}
+
+@supports (text-stroke: 1px #000) or (-webkit-text-stroke: 1px #000) {
+  .card__label {
+    -webkit-text-stroke: 1px white;
+    text-stroke: 1px white;
+    text-shadow: none;
+  }
+}
+
+@media (width <= 375px) {
+  .header {
+    max-height: 327px;
+    padding: 120px 14px;
+    margin-bottom: 100px;
+  }
+
+  .card {
+    max-height: 863px;
+  }
+
+  .card__title {
+    padding-top: 4px;
+    padding-bottom: 6px;
+    width: 351px;
+    word-wrap: break-word;
+  }
+
+  .button__end {
+    flex-direction: column;
+    margin-top: 52px;
+    width: 306px;
+    height: 84px;
+    margin-left: 34.5px;
+    margin-bottom: 100px;
+    gap: 8px;
+  }
+
+  .image_button {
+    height: 28px;
+    width: 28px;
+  }
+
+  .card__label {
+    right: 11px;
+    top: 23px;
+  }
+
+  .modal {
+    width: 341px;
+    height: 195px;
+    padding-left: 42px;
+  }
+
+  .modal__button {
+    width: 257px;
+  }
 }
