--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
   min-inline-size: 320px;
   min-block-size: 100dvb;
   font-family: var(--font-main, fantasy);
-  font-variation-settings: "wgth" var(--weight-text);
+  font-variation-settings: "wght" var(--weight-text);
   align-items: center;
   justify-content: center;
   background-image: repeating-linear-gradient(
