--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
   min-inline-size: 320px;
   min-block-size: 100dvb;
   font-family: var(--font-main, fantasy);
-  font-variation-settings: var(--weight-text);
+  font-variation-settings: "wght" var(--weight-text);
   align-items: center;
   justify-content: center;
   background-image: repeating-linear-gradient(
@@ -62,10 +62,12 @@
 .card__title {
   font-size: 18px;
   font-weight: var(--weight-title);
-  padding-top: 3px;
+  padding-top: 6px;
   padding-left: 10px;
   padding-bottom: 7px;
+  line-height: 100%;
   font-family: var(--font-main);
+  font-variation-settings: "wght" var(--weight-title);
 }
 
 .card__label {
