--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,12 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
-  font-family: var(--font-main, fantasy);
+  font-family: var(--font-main), sans-serif;
   font-variation-settings: "wght" var(--weight-text);
-  align-items: center;
-  justify-content: center;
+  /* display: flex;
+  flex-direction: column; */
+  /* align-items: center;
+  justify-content: center; */
   background-image: repeating-linear-gradient(
       to left,
       #d3d3d3 0px,
@@ -25,7 +27,7 @@
   background-repeat: no-repeat;
   padding: 100px 0;
   margin: auto;
-  width: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
+  inline-size: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
 }
 
 .header {
@@ -37,7 +39,7 @@
   padding: clamp(7.5rem, 7.1479rem + 1.5023vw, 8rem) 0
     clamp(7.5rem, 7.1479rem + 1.5023vw, 8rem);
   font-family: var(--font-accent), fantasy;
-  margin-bottom: 102px;
+  margin-bottom: 100px;
 }
 
 .header__logo {
@@ -53,30 +55,31 @@
 }
 
 .card {
-  max-height: 1043px;
   border: 2px solid #000;
   background-color: #fff;
-  margin-top: 50px;
+}
+
+.card__content:not(:last-of-type) {
+  margin-bottom: 50px;
 }
 
 .card__title {
   font-size: 18px;
   font-weight: var(--weight-title);
-  padding-top: 6px;
-  padding-left: 10px;
-  padding-bottom: 7px;
+  padding: 6.5px 10px;
   line-height: 100%;
-  font-family: var(--font-main);
+  font-family: var(--font-main), sans-serif;
   font-variation-settings: "wght" var(--weight-title);
+  border-bottom: 2px solid #000;
 }
 
 .card__label {
   position: absolute;
-  font-family: var(--font-accent);
+  font-family: var(--font-accent), fantasy;
   font-size: 14px;
   color: black;
   mix-blend-mode: hard-light;
-  -webkit-text-stroke: 0.7px #fff;
+  text-shadow: 0.7px #fff;
   opacity: 0.5;
   top: 25px;
   right: clamp(0.8125rem, 0.5484rem + 1.1268vw, 1.5625rem);
@@ -85,70 +88,67 @@
 
 .card__container {
   position: relative;
-  border-top: 2px solid #000;
-  border-bottom: 2px solid #000;
-  display: block;
   overflow: hidden;
 }
 
 .card__image {
-  object-fit: contain;
+  aspect-ratio: 1/1;
+  object-fit: cover;
   width: 100%;
   display: block;
+  object-position: center;
 }
 
-.card__image-one {
+.filter-contrast {
   filter: contrast(110%);
 }
 
-.card__image-two {
+.filter-grayscale {
   filter: grayscale(0.8);
 }
 
-.card__image-three {
+.filter-saturate {
   filter: saturate(200%);
 }
 
-.card__image-four {
+.filter-hue-rotate {
   filter: hue-rotate(20deg);
 }
 
-.card__image-five {
+.filter-invert {
   filter: invert(80%);
 }
 
-.card__image-six {
+.filter-sepia {
   filter: sepia(100%);
 }
 
-.card__image-seven {
+.filter-blur {
   filter: blur(0.3em);
 }
 
-.card__image-eight {
+.filer-opacity {
   filter: opacity(0.7);
 }
 
-.card__text {
-  padding-top: 25px;
-  padding-left: 25px;
-  padding-right: 25px;
+.card__container-text {
+  border-top: 2px solid #000;
+  padding: 25px;
   line-height: 21px;
   font-size: 18px;
   font-weight: var(--weight-text);
 }
 
-.card__text-end {
-  padding-top: 27px;
-  line-height: 21px;
+.card__text:not(:last-of-type) {
+  margin-bottom: 27px;
 }
 
 .card__icon {
   display: flex;
   justify-content: flex-end;
-  padding-right: 25px;
-  padding-bottom: 21px;
-  padding-top: 25px;
+  padding: 0 25px 25px;
+  align-items: center;
+  gap: 5px;
 }
 
 .button {
@@ -156,12 +156,18 @@
   position: relative;
   overflow: hidden;
   color: #fff;
+  transition: box-shadow 0.3s ease;
+  border: 2px solid var(--color-contour);
+  font-family: var(--font-accent), fantasy;
+  font-size: 14px;
+  background-color: #fff;
+  padding: 10px 35px;
+  z-index: 2;
 }
 
 .button:focus {
   outline: none;
   box-shadow: 2px 2px #000;
-  transition: box-shadow 0.35s ease;
 }
 
 .button::after {
@@ -183,60 +189,48 @@
 }
 
 .button__end {
-  border: 2px solid #000;
-  background-color: #fff;
   align-items: center;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
   margin-top: 50px;
-  width: 339px;
-  height: 55px;
-  margin-left: 180px;
-  margin-bottom: 103px;
-  gap: 8px;
+  padding: 15px 16px;
+  position: relative;
+  margin: 50px auto 0;
+}
+
+.button__end svg {
+  position: relative;
+  height: 21px;
+  mix-blend-mode: difference;
+  z-index: 2;
 }
 
 .button__text {
-  font-size: 14px;
-  font-weight: var(--weight-text);
   position: relative;
-  display: inline-block;
   z-index: 2;
-  line-height: 90%;
   mix-blend-mode: difference;
-  font-family: var(--font-accent), fantasy;
-  background-color: var(--color-contour);
 }
 
 .image_button {
-  position: relative;
-  z-index: 2;
-  mix-blend-mode: difference;
-  filter: invert(1);
-  height: 21px;
-  width: 21px;
+  width: 39px;
 }
 
 .card__icon-button {
-  border: none;
+  border: 2px solid transparent;
+  transition: border 0.4s ease;
   background-color: transparent;
   cursor: pointer;
+  max-height: 38px;
+  padding: 0;
 }
 
 .card__like-button {
-  border: 2px solid #000;
-  background-color: transparent;
-  width: 130px;
-  height: 38px;
+  min-width: 130px;
 }
 
 .modal {
   border: 2px solid #000;
   width: 357px;
-  height: 193px;
-  padding-left: 30px;
-  padding-top: 30px;
+  padding: 30px;
 }
 
 .modal[open] {
@@ -244,7 +238,7 @@
 }
 
 .modal[open]::backdrop {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.75);
 }
 
 .modal__content {
@@ -261,17 +255,12 @@
   font-weight: var(--weight-text);
   text-transform: uppercase;
   line-height: 150%;
-}
-
-.modal__image {
-  width: 39px;
-  height: 39px;
+  width: 199px;
+  word-wrap: break-word;
 }
 
 .modal__button {
-  background: transparent;
-  width: 293px;
-  height: 38px;
+  width: 100%;
 }
 
 @supports (text-stroke: 1px #000) or (-webkit-text-stroke: 1px #000) {
@@ -284,20 +273,15 @@
 
 @media (width <= 375px) {
   .header {
-    max-height: 327px;
     padding: 120px 14px;
     margin-bottom: 100px;
   }
 
-  .card {
-    max-height: 863px;
-  }
-
   .card__title {
-    padding-top: 4px;
-    padding-bottom: 6px;
+    padding: 4.7px 10px;
     width: 351px;
     word-wrap: break-word;
+    line-height: 120%;
   }
 
   .button__end {
@@ -320,9 +304,12 @@
     top: 23px;
   }
 
+  .button__end svg {
+    height: 28px;
+  }
+
   .modal {
     width: 341px;
-    height: 195px;
     padding-left: 42px;
   }
 
